--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.2.0"
+    "react-json-to-table": "^0.1.5",
+    "react-scripts": "3.2.0",
+    "victory": "^33.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
